<resources>
    <string name="app_name">States App</string>
    <string name="login_screen_title">LOGIN SCREEN</string>
    <string name="email">Email</string>
    <string name="enter_email">Email Address is required</string>
    <string name="valid_email">Please enter a valid email using the format user@domain.com</string>

    <string name="password">Password</string>
    <string name="enter_password">Password is required</string>
    <string name="valid_password">Max character limit reached</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_screen">REGISTER SCREEN</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="you_are_logged_in_successfully">You are logged in successfully</string>
    <string name="united_states_list">UNITED STATES LIST</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="create_address">Create Address</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="state">State: </string>
    <string name="uid">User id</string>
    <string name="email_id">Email Id</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="register_new_user">Register New User</string>
    <string name="something_went_wrong_please_check_your_network_connection">Something went wrong. Please check your Network Connection.</string>
</resources>